--- a/AI/Notebook 2/nb2.ipynb
+++ b/AI/Notebook 2/nb2.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -186,6 +186,85 @@
     "**Ejercicio 1:**\n",
     "\n",
     "Implemente la función `breadth_first_search` y encuentre una solución para `prob`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def breadth_first_search(prob):\n",
+    "    s = prob.estado_inicial\n",
+    "    #print(\"set initial state\")\n",
+    "    if prob.test_objetivo(s):\n",
+    "        #print(\"the initial state is solution\")\n",
+    "        return s\n",
+    "\n",
+    "    #print(\"initialize frontier list\")\n",
+    "    frontera = []\n",
+    "    frontera.append(s)\n",
+    "    \n",
+    "\n",
+    "    while len(frontera) > 0:\n",
+    "        #print(\"old fronteir lenght: \", len(frontera))\n",
+    "        s = frontera.pop(0)\n",
+    "        #print(\"Check fronteir node\", prob.acciones_aplicables(s))\n",
+    "        for accion_aplicable in prob.acciones_aplicables(s):\n",
+    "            #print(\"Check son node\", accion_aplicable)\n",
+    "            hijo = prob.transicion(s, accion_aplicable)\n",
+    "\n",
+    "            if prob.test_objetivo(hijo): \n",
+    "                #print(\"evaluate if son node is solution\")\n",
+    "                return hijo\n",
+    "\n",
+    "            frontera.append(hijo)\n",
+    "            #print(\"new fronteir lenght: \", len(frontera))\n",
+    "            #print(\"add son node to fronteir\", frontera)\n",
+    "        \n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob.test_objetivo(breadth_first_search(prob))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b']"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list = [\"a\"]\n",
+    "my_list.append(\"b\")\n",
+    "my_list"
    ]
   },
   {
@@ -677,7 +756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
