update notebook with solutions for exc 1,2 and 3

--- a/AI/Notebook 3/nb3.ipynb
+++ b/AI/Notebook 3/nb3.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,6 +123,45 @@
     "n1 = nodo_hijo(prob, n, 1)\n",
     "n2 = nodo_hijo(prob, n1, 5)\n",
     "n3 = nodo_hijo(prob, n2, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def depth(estado): \n",
+    "\n",
+    "    camino = []\n",
+    "    camino.append(estado.codigo)\n",
+    "\n",
+    "    while estado.madre is not None: \n",
+    "        estado_madre = estado.madre\n",
+    "        camino.append(estado_madre.codigo)\n",
+    "        estado = estado_madre\n",
+    "\n",
+    "    return len(camino) - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "depth(n3)\n"
    ]
   },
   {
@@ -146,6 +185,54 @@
    "metadata": {},
    "source": [
     "**Ayuda:** Pruebe definiendo primero una función recursiva que encuentra los códigos de todos los estados en el camino y luego verifica si hay repetidos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_cycle(estado):\n",
+    "\n",
+    "    camino = []\n",
+    "    camino.append(estado.codigo)\n",
+    "\n",
+    "    while estado.madre is not None: \n",
+    "        estado_madre = estado.madre\n",
+    "        camino.append(estado_madre.codigo)\n",
+    "        estado = estado_madre\n",
+    "\n",
+    "    counter = {i:camino.count(i) for i in camino}\n",
+    "\n",
+    "    repetidos = 0\n",
+    "    caminos_repetidos = []\n",
+    "    for camino, conteo in counter.items():\n",
+    "        if conteo > 1:\n",
+    "            repetidos += 1\n",
+    "            caminos_repetidos.append({camino : conteo})\n",
+    "    \n",
+    "    return True if repetidos > 0 else False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_cycle(n3)\n"
    ]
   },
   {
@@ -200,6 +287,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def depth_limited_search(prob, l):\n",
+    "    nodo = Nodo(prob.estado_inicial, None, None, 0, prob.codigo(prob.estado_inicial))\n",
+    "    frontera = [nodo] # LIFO list\n",
+    "    resultado = \"Fail\"\n",
+    "    \n",
+    "    while len(frontera) > 0: \n",
+    "        nodo = frontera.pop()\n",
+    "        \n",
+    "        if prob.test_objetivo(nodo.estado): \n",
+    "            return nodo\n",
+    "        \n",
+    "        if depth(nodo) >= l: \n",
+    "            resultado = \"cutoff\"\n",
+    "\n",
+    "        elif not is_cycle(nodo): \n",
+    "            for hijo in Expand(prob, nodo):\n",
+    "                frontera.append(hijo)\n",
+    "    return resultado\n",
+    "\n",
+    "def Expand(prob, nodo): \n",
+    "    s = nodo.estado\n",
+    "    nodos = []\n",
+    "    for accion in prob.acciones_aplicables(s):\n",
+    "        hijo = nodo_hijo(prob, nodo, accion)\n",
+    "        nodos.append(hijo)\n",
+    "    return nodos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2-3'"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob = JarrasAgua()\n",
+    "\n",
+    "depth_limited_search(prob, 10).codigo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Las soluciones son diferentes, debido a que la frontera es una lista tipo LIFO y al permitir una profundidad mayor, evalua el camino alterno a la solución encontrada en profundidad 6. Se puede verificar que al hacer la lista de frontera tipo FIFO, la solución es la misma para ambas profundidades. "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -218,7 +368,7 @@
     "\n",
     "El siguiente es un esquema de este algoritmo de búsqueda:\n",
     "\n",
-    "<img src=\"./imagenes/iterative-deepening1.png\" width=\"auto\"/>\n",
+    "<img src=\"./imagenes/iterative-deepening.png\" width=\"auto\"/>\n",
     "\n",
     "Y el siguiente es el pseudocódigo respectivo:\n",
     "\n",
