update Proyecto 1: run cells

--- a/machine learning/Proyecto 1/Proyecto 1.ipynb
+++ b/machine learning/Proyecto 1/Proyecto 1.ipynb
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
@@ -484,9 +484,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 332,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error Cuadratico Medio del modelo lineal : [[14.44572524]]\n"
+     ]
+    }
+   ],
    "source": [
     "ones = np.ones((len(x),1))\n",
     "x = df_data.values\n",
@@ -508,9 +516,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 333,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error Cuadratico Medio del modelo lineal : [[19.95321282]]\n"
+     ]
+    }
+   ],
    "source": [
     "ones = np.ones((len(x),1))\n",
     "x = df_data.values\n",
@@ -532,9 +548,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 334,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error Cuadratico Medio del modelo lineal : [[52.76976999]]\n"
+     ]
+    }
+   ],
    "source": [
     "ones = np.ones((len(x),1))\n",
     "x = df_data.values\n",
