--- a/machine learning/Proyecto 1/Proyecto 1.ipynb
+++ b/machine learning/Proyecto 1/Proyecto 1.ipynb
@@ -403,6 +403,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 343,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], shape=(0, 1), dtype=float64)"
+      ]
+     },
+     "execution_count": 343,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(y[0:0])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
