update perceptron notebook with possible solutions for exc1 and exc2

--- a/machine learning/Taller perceptron/perceptron.ipynb
+++ b/machine learning/Taller perceptron/perceptron.ipynb
@@ -75,12 +75,19 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se cargan algunos datos de prueba:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +96,7 @@
        "Text(0.5, 1.0, 'Random Classification Data with 2 classes')"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -132,8 +139,106 @@
    "source": [
     "Se define la clase `my_perceptron`, con los siguientes métodos: \n",
     "\n",
-    "* `__init__`: inicializa la clase con valores de $\\eta$ e iteraciones pre definidas. \n",
-    "*  `fit`: "
+    "* `__init__`: inicializa la clase con valores de $\\eta$ e iteraciones pre definidas, \n",
+    "*  `fit`: Ajusta el perceptron a los datos de entrenamiento, \n",
+    "* `predict`: calcula el valor de salida en función de los datos que recibe, \n",
+    "* `net_input`: define la función de activación. En nuestro caso, una función escalón desde -1 a 1. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class my_perceptron: \n",
+    "    '''\n",
+    "    Clase perceptron basada en las notas de clase de curso de machine learning de la maestria MACC y el tutorial 'programando un perceptron en python' https://www.llipe.com/2017/04/19/programando-un-clasificador-perceptron-en-python/\n",
+    "\n",
+    "    Parámetros\n",
+    "    ----------\n",
+    "    eta: float\n",
+    "        Tasa de aprendizaje\n",
+    "    \n",
+    "    n_iter: int\n",
+    "        Número de iteraciones sobre el conjunto de datos\n",
+    "\n",
+    "    Atributos\n",
+    "    ---------\n",
+    "    omega: numpy array 1d\n",
+    "            Vector de pesos\n",
+    "\n",
+    "    '''\n",
+    "\n",
+    "    def __init__(self, eta = 0.1, n_iter = 10):\n",
+    "        self.eta = eta\n",
+    "        self.n_iter = n_iter\n",
+    "\n",
+    "    def fit(self, X, y): \n",
+    "        '''\n",
+    "        Ajusta los datos de entrenamiento\n",
+    "\n",
+    "        Parámetros\n",
+    "        ----------\n",
+    "        X: numpy array, shape := [n_samples, n_features]\n",
+    "            Matriz de datos, donde n_samples es el número de observaciones y n_features es el número de caracteristicas.\n",
+    "        y: numpy array, shape := [n_samples]\n",
+    "            Vector de datos objetivo (target) \n",
+    "\n",
+    "        Returns \n",
+    "        -------\n",
+    "        Self: objeto\n",
+    "        '''\n",
+    "\n",
+    "        self.omega = np.zeros(1 + X.shape[1])\n",
+    "        ones = np.ones((len(X),1))\n",
+    "        X = np.hstack((X,ones))\n",
+    "        \n",
+    "        for i in range(self.n_iter): \n",
+    "            # usamos el producto @ para sacar provecho de los array y no usar for\n",
+    "            delta_omega = self.eta * X.T @ (y - self.predict(X)) \n",
+    "            self.omega = self.omega + delta_omega\n",
+    "            # print(self.omega)\n",
+    "        return self\n",
+    "\n",
+    "    def predict(self, X): \n",
+    "        '''\n",
+    "        Retorna la clase usando la función escalón.\n",
+    "        phi(z) = 1 si z >= theta; -1  si z < theta\n",
+    "        '''\n",
+    "        phi = np.where(self.net_input(X) >= 0, 1, -1)\n",
+    "        return phi\n",
+    "    \n",
+    "    def net_input(self, X): \n",
+    "        z = X @ self.omega.T\n",
+    "        return z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definida la clase, se entrena el perceptron con los datos de ejemplo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El vector de omega encontrado es: [ 17.87170566 -61.52990054  39.6       ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_classifier = my_perceptron()\n",
+    "my_classifier.fit(X,y)\n",
+    "\n",
+    "print(f\"El vector de omega encontrado es: {my_classifier.omega}\")\n"
    ]
   },
   {
@@ -141,6 +246,151 @@
    "metadata": {},
    "source": [
     "## Implementación adaline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tomando en cuenta que \n",
+    "\n",
+    "$$\\boldsymbol\\omega:=\\boldsymbol\\omega-\\eta\\nabla\\mathbf{J}(\\boldsymbol\\omega),$$\n",
+    "\n",
+    "donde se puede definir $-\\eta\\nabla\\mathbf{J}(\\boldsymbol\\omega) = \\Delta\\boldsymbol\\omega $, tal que en forma vectorial resulta\n",
+    "\n",
+    "$$\\Delta\\boldsymbol\\omega = \\eta\\mathbf{X}^{\\text{T}}(\\mathbf{y}-\\mathbf{X}\\boldsymbol\\omega),$$ \n",
+    "\n",
+    "y sabiendo que $z = \\boldsymbol\\omega^{\\text{T}}\\mathbf{x}$, y $\\varphi(z) = z$, en python se procede de la siguiente forma:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class my_adaline: \n",
+    "    '''\n",
+    "    Clase perceptron basada en las notas de clase de curso de machine learning de la maestria MACC y el tutorial 'programando un perceptron en python' https://www.llipe.com/2017/04/19/programando-un-clasificador-perceptron-en-python/\n",
+    "\n",
+    "    Parámetros\n",
+    "    ----------\n",
+    "    eta: float\n",
+    "        Tasa de aprendizaje\n",
+    "    \n",
+    "    n_iter: int\n",
+    "        Número de iteraciones sobre el conjunto de datos\n",
+    "\n",
+    "    Atributos\n",
+    "    ---------\n",
+    "    omega: numpy array 1d\n",
+    "            Vector de pesos\n",
+    "\n",
+    "    '''\n",
+    "\n",
+    "    def __init__(self, eta = 0.1, n_iter = 10):\n",
+    "        self.eta = eta\n",
+    "        self.n_iter = n_iter\n",
+    "        self.X = X\n",
+    "\n",
+    "    def fit(self, X, y): \n",
+    "        '''\n",
+    "        Ajusta los datos de entrenamiento\n",
+    "\n",
+    "        Parámetros\n",
+    "        ----------\n",
+    "        X: numpy array, shape := [n_samples, n_features]\n",
+    "            Matriz de datos, donde n_samples es el número de observaciones y n_features es el número de caracteristicas.\n",
+    "        y: numpy array, shape := [n_samples]\n",
+    "            Vector de datos objetivo (target) \n",
+    "\n",
+    "        Returns \n",
+    "        -------\n",
+    "        Self: objeto\n",
+    "        '''\n",
+    "\n",
+    "        self.omega = np.zeros(1 + self.X.shape[1])\n",
+    "        ones = np.ones((len(self.X),1))\n",
+    "        self.X = np.hstack((self.X,ones))\n",
+    "        \n",
+    "        for i in range(self.n_iter): \n",
+    "            # usamos el producto @ para sacar provecho de los array y no usar 'for'\n",
+    "            delta_omega = self.eta * self.X.T @ (y - self.X @ self.omega) \n",
+    "            self.omega = self.omega + delta_omega\n",
+    "            # print(self.omega)\n",
+    "        return self\n",
+    "\n",
+    "    def predict(self, X): \n",
+    "        '''\n",
+    "        Retorna la clase usando la función escalón.\n",
+    "        phi(z) = 1 si z >= theta; -1  si z < theta\n",
+    "        '''\n",
+    "        phi = self.net_input(self.X)\n",
+    "        return phi\n",
+    "    \n",
+    "    def net_input(self, X): \n",
+    "        z = self.X @ self.omega.T\n",
+    "        return z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El vector de omega encontrado es: [ 6.80727610e+25  5.13916015e+26 -5.90171065e+25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_2ndclassifier = my_adaline()\n",
+    "my_2ndclassifier.fit(X,y)\n",
+    "\n",
+    "print(f\"El vector de omega encontrado es: {my_2ndclassifier.omega}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 306,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(my_2ndclassifier.predict(X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 307,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(y)"
    ]
   },
   {
