update perceptron notebook with more solutions

--- a/machine learning/Taller perceptron/perceptron.ipynb
+++ b/machine learning/Taller perceptron/perceptron.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "Text(0.5, 1.0, 'Random Classification Data with 2 classes')"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 404,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,9 +190,7 @@
     "        Self: objeto\n",
     "        '''\n",
     "\n",
-    "        self.omega = np.zeros(1 + X.shape[1])\n",
-    "        ones = np.ones((len(X),1))\n",
-    "        X = np.hstack((X,ones))\n",
+    "        self.omega = np.zeros(X.shape[1])\n",
     "        \n",
     "        for i in range(self.n_iter): \n",
     "            # usamos el producto @ para sacar provecho de los array y no usar for\n",
@@ -223,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [
     {
@@ -235,6 +233,9 @@
     }
    ],
    "source": [
+    "ones = np.ones((len(X),1))\n",
+    "X = np.hstack((X, ones))\n",
+    "\n",
     "my_classifier = my_perceptron()\n",
     "my_classifier.fit(X,y)\n",
     "\n",
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +292,6 @@
     "    def __init__(self, eta = 0.1, n_iter = 10):\n",
     "        self.eta = eta\n",
     "        self.n_iter = n_iter\n",
-    "        self.X = X\n",
     "\n",
     "    def fit(self, X, y): \n",
     "        '''\n",
@@ -309,13 +309,11 @@
     "        Self: objeto\n",
     "        '''\n",
     "\n",
-    "        self.omega = np.zeros(1 + self.X.shape[1])\n",
-    "        ones = np.ones((len(self.X),1))\n",
-    "        self.X = np.hstack((self.X,ones))\n",
+    "        self.omega = np.zeros(X.shape[1])\n",
     "        \n",
     "        for i in range(self.n_iter): \n",
     "            # usamos el producto @ para sacar provecho de los array y no usar 'for'\n",
-    "            delta_omega = self.eta * self.X.T @ (y - self.X @ self.omega) \n",
+    "            delta_omega = self.eta * X.T @ (y - X @ self.omega) \n",
     "            self.omega = self.omega + delta_omega\n",
     "            # print(self.omega)\n",
     "        return self\n",
@@ -325,11 +323,11 @@
     "        Retorna la clase usando la función escalón.\n",
     "        phi(z) = 1 si z >= theta; -1  si z < theta\n",
     "        '''\n",
-    "        phi = self.net_input(self.X)\n",
+    "        phi = self.net_input(X)\n",
     "        return phi\n",
     "    \n",
     "    def net_input(self, X): \n",
-    "        z = self.X @ self.omega.T\n",
+    "        z = X @ self.omega.T\n",
     "        return z"
    ]
   },
@@ -354,46 +352,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 306,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "150"
-      ]
-     },
-     "execution_count": 306,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(my_2ndclassifier.predict(X))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 307,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "150"
-      ]
-     },
-     "execution_count": 307,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(y)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -404,7 +362,487 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Al implementar la AND y la OR, si compara los pesos con lso datos de la clase $1$ (cuya salida es $1$), ¿Qué puede concluir?"
+    "Definiendo las tablas de verdad de las compuertas, mediante arreglos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solución con perceptron"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### AND"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 383,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1, -1, -1,  1])"
+      ]
+     },
+     "execution_count": 383,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# AND peceptron\n",
+    "X_and = np.array([\n",
+    "    [0,0],\n",
+    "    [0,1],\n",
+    "    [1,0],\n",
+    "    [1,1]\n",
+    "])\n",
+    "\n",
+    "y_and = np.array([\n",
+    "    0,\n",
+    "    0,\n",
+    "    0,\n",
+    "    1])\n",
+    "\n",
+    "ones = np.ones((len(X_and),1))\n",
+    "X_and = np.hstack((X_and, ones))\n",
+    "\n",
+    "my_andclassifier = my_perceptron(eta=0.01, n_iter=100)\n",
+    "my_andclassifier.fit(X_and, y_and)\n",
+    "my_andclassifier.predict(X_and)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### OR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 384,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1,  1,  1,  1])"
+      ]
+     },
+     "execution_count": 384,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# OR peceptron\n",
+    "X_or = np.array([\n",
+    "    [0,0],\n",
+    "    [0,1],\n",
+    "    [1,0],\n",
+    "    [1,1]\n",
+    "])\n",
+    "\n",
+    "y_or = np.array([\n",
+    "    0,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1])\n",
+    "    \n",
+    "ones = np.ones((len(X_or),1))\n",
+    "X_or = np.hstack((X_or, ones))\n",
+    "\n",
+    "my_andclassifier = my_perceptron(eta=0.01, n_iter=100)\n",
+    "my_andclassifier.fit(X_or, y_or)\n",
+    "my_andclassifier.predict(X_or)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### XOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 409,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1, -1, -1, -1])"
+      ]
+     },
+     "execution_count": 409,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# XOR peceptron\n",
+    "X_xor = np.array([\n",
+    "    [0,0],\n",
+    "    [0,1],\n",
+    "    [1,0],\n",
+    "    [1,1]\n",
+    "])\n",
+    "y_xor =  np.array([\n",
+    "    0,\n",
+    "    1,\n",
+    "    1,\n",
+    "    0])\n",
+    "\n",
+    "ones = np.ones((len(X_xor),1))\n",
+    "X_xor = np.hstack((X_xor, ones))\n",
+    "\n",
+    "my_andclassifier = my_perceptron(eta=0.01, n_iter=100)\n",
+    "my_andclassifier.fit(X_xor, y_xor)\n",
+    "my_andclassifier.predict(X_xor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### XNOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 408,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1, -1, -1, -1])"
+      ]
+     },
+     "execution_count": 408,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# XNOR peceptron\n",
+    "X_xnor = np.array([\n",
+    "    [0,0],\n",
+    "    [0,1],\n",
+    "    [1,0],\n",
+    "    [1,1]\n",
+    "])\n",
+    "\n",
+    "y_xnor = np.array([\n",
+    "    1,\n",
+    "    0,\n",
+    "    0,\n",
+    "    1])\n",
+    "\n",
+    "ones = np.ones((len(X_xnor),1))\n",
+    "X_xnor = np.hstack((X_xnor, ones))\n",
+    "\n",
+    "my_andclassifier = my_perceptron(eta=0.01, n_iter=100)\n",
+    "my_andclassifier.fit(X_xnor, y_xnor)\n",
+    "my_andclassifier.predict(X_xnor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solucion con adaline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### AND"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 439,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.01395443,  0.28703114,  0.28703114,  0.5880167 ])"
+      ]
+     },
+     "execution_count": 439,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# AND adaline\n",
+    "X_and = np.array([\n",
+    "    [0,0],\n",
+    "    [0,1],\n",
+    "    [1,0],\n",
+    "    [1,1]\n",
+    "])\n",
+    "\n",
+    "y_and = np.array([\n",
+    "    0,\n",
+    "    0,\n",
+    "    0,\n",
+    "    1])\n",
+    "\n",
+    "ones = np.ones((len(X_and),1))\n",
+    "X_and = np.hstack((X_and, ones))\n",
+    "\n",
+    "my_andclassifier = my_adaline(eta=0.1, n_iter=10)\n",
+    "my_andclassifier.fit(X_and, y_and)\n",
+    "my_andclassifier.predict(X_and)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### OR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 423,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.2504511 , 0.75007079, 0.75007079, 1.24969048])"
+      ]
+     },
+     "execution_count": 423,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# OR adaline\n",
+    "X_or = np.array([\n",
+    "    [0,0],\n",
+    "    [0,1],\n",
+    "    [1,0],\n",
+    "    [1,1]\n",
+    "])\n",
+    "\n",
+    "y_or = np.array([\n",
+    "    0,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1])\n",
+    "    \n",
+    "ones = np.ones((len(X_or),1))\n",
+    "X_or = np.hstack((X_or, ones))\n",
+    "\n",
+    "my_andclassifier = my_adaline(eta=0.01, n_iter=1000)\n",
+    "my_andclassifier.fit(X_or, y_or)\n",
+    "my_andclassifier.predict(X_or)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### XOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 425,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.42520267, 0.76237983, 0.76237983, 1.099557  ])"
+      ]
+     },
+     "execution_count": 425,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# XOR adaline\n",
+    "X_xor = np.array([\n",
+    "    [0,0],\n",
+    "    [0,1],\n",
+    "    [1,0],\n",
+    "    [1,1]\n",
+    "])\n",
+    "y_xor =  np.array([\n",
+    "    0,\n",
+    "    1,\n",
+    "    1,\n",
+    "    0])\n",
+    "    \n",
+    "ones = np.ones((len(X_or),1))\n",
+    "X_or = np.hstack((X_or, ones))\n",
+    "\n",
+    "my_andclassifier = my_adaline(eta=0.01, n_iter=100)\n",
+    "my_andclassifier.fit(X_or, y_or)\n",
+    "my_andclassifier.predict(X_or)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### XNOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 430,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.38959124, 0.48209111, 0.48209111, 0.57459099])"
+      ]
+     },
+     "execution_count": 430,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# XNOR adaline\n",
+    "X_xnor = np.array([\n",
+    "    [0,0],\n",
+    "    [0,1],\n",
+    "    [1,0],\n",
+    "    [1,1]\n",
+    "])\n",
+    "\n",
+    "y_xnor = np.array([\n",
+    "    1,\n",
+    "    0,\n",
+    "    0,\n",
+    "    1])\n",
+    "\n",
+    "ones = np.ones((len(X_xnor),1))\n",
+    "X_xnor = np.hstack((X_xnor, ones))\n",
+    "\n",
+    "my_andclassifier = my_adaline(eta=0.01, n_iter=100)\n",
+    "my_andclassifier.fit(X_xnor, y_xnor)\n",
+    "my_andclassifier.predict(X_xnor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Al implementar la AND y la OR, si compara los pesos con los datos de la clase $1$ (cuya salida es $1$), ¿Qué puede concluir?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AND"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 431,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pesos and-perceptron [ 0.02  0.02 -0.02]; pesos and-adaline [ 0.5   0.5  -0.25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# AND\n",
+    "X_and = np.array([\n",
+    "    [0,0],\n",
+    "    [0,1],\n",
+    "    [1,0],\n",
+    "    [1,1]\n",
+    "])\n",
+    "\n",
+    "y_and = np.array([\n",
+    "    0,\n",
+    "    0,\n",
+    "    0,\n",
+    "    1])\n",
+    "\n",
+    "ones = np.ones((len(X_and),1))\n",
+    "X_and = np.hstack((X_and, ones))\n",
+    "\n",
+    "my_classifier = my_perceptron(eta=0.01, n_iter=100)\n",
+    "my_classifier.fit(X_and, y_and)\n",
+    "\n",
+    "my_classifier2nd = my_adaline(eta=0.01, n_iter=100000)\n",
+    "my_classifier2nd.fit(X_and, y_and)\n",
+    "\n",
+    "print(f\"Pesos and-perceptron {my_classifier.omega}; pesos and-adaline {my_classifier2nd.omega}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### OR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 432,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pesos and-perceptron [ 4.00000000e-02  4.00000000e-02 -3.46944695e-18]; pesos and-adaline [0.5  0.5  0.25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# OR\n",
+    "X_or = np.array([\n",
+    "    [0,0],\n",
+    "    [0,1],\n",
+    "    [1,0],\n",
+    "    [1,1]\n",
+    "])\n",
+    "\n",
+    "y_or = np.array([\n",
+    "    0,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1])\n",
+    "ones = np.ones((len(X_or),1))\n",
+    "X_or = np.hstack((X_or, ones))\n",
+    "\n",
+    "my_classifier = my_perceptron(eta=0.01, n_iter=100)\n",
+    "my_classifier.fit(X_or, y_or)\n",
+    "\n",
+    "my_classifier2nd = my_adaline(eta=0.01, n_iter=100000)\n",
+    "my_classifier2nd.fit(X_or, y_or)\n",
+    "\n",
+    "print(f\"Pesos and-perceptron {my_classifier.omega}; pesos and-adaline {my_classifier2nd.omega}\")"
    ]
   },
   {
@@ -425,7 +863,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Solución Iris con adaline"
+    "### Solución Iris con adaline\n"
    ]
   },
   {
@@ -434,11 +872,6 @@
    "source": [
     "### Comparación de resultados"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
