update notebook regresion lineal and perceptron

--- a/machine learning/S2/S1_Regresión_Lineal.ipynb
+++ b/machine learning/S2/S1_Regresión_Lineal.ipynb
@@ -350,11 +350,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Una **función de costo** es una función que me indica cual es el costo que incurre el modelo por seleccionar un conjunto de parametros $\\theta$. La función de costo para nuestro problema de regresión será el error cuadrático medio. Tradicionalmente la función de costo se expresa con la letra $J$. De esta forma, el problema de regresión se enfoca en encontrar el conjunto de parametros $\\theta$ que minimiza la función de costo, o en otras palabras se debe solucionar:\n",
     "\n",
@@ -372,9 +367,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ¿Cómo luce la función de costo con múltiple variables?\n",
+    "### ¿Cómo luce la función de costo con múltiple variables? \n",
+    "## Error! acá no se habla de multiples variables, sino los pesos de los parámetros regresores. La variable independiente sigue siendo una: $x$. En  este caso, variar $\\theta_0$ y $\\theta_1$ es modificar la pendiente de la recta (pendiente y corte con y).\n",
     "\n",
     "En este caso nuestra función de costo es convexa, lo cual implica que podemos encontrar un mínimo global, la forma de está función de costo es un paraboloide, como se muestra en la siguiente figura.\n",
+    "\n",
+    "\n",
     "\n",
     "![title](img/Cost_Contour.png)\n",
     "\n",
@@ -406,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Aprendizaje de los Parámetros\n",
+    "## Aprendizaje de los Parámetros (Encontrar los parámetros)\n",
     "\n",
     "En esta sección estudiaremos dos formas para poder _\"aprender\"_ cuales son los parámetros óptimos de nuestro modelo de regresión lineal. El pimer método es _algebraico_ y el segundo método es un algoritmo de búsqueda utilizando técnicas de optimización.\n",
     "\n",
@@ -913,6 +911,7 @@
    "metadata": {},
    "source": [
     "### Gradiente Descendiente para Regresión Lineal multivariable\n",
+    "Ver [Linear Regression Using Gradient Descent for Beginners— Intuition, Math and Code](https://medium.com/analytics-vidhya/linear-regression-gradient-descent-intuition-and-math-c9a8f5aeeb22)\n",
     "\n",
     "Siguiendo el mismo análisis anterior, las ecuaciones de actualización par alos parámetros utilizando gradiente descendiente son:\n",
     "\n",
@@ -968,7 +967,7 @@
     "solution_first": true
    },
    "source": [
-    "## Más allá de la Regresión Lineal\n",
+    "## Más allá de la Regresión Lineal (regresión no lineal y simple)\n",
     "\n",
     "El modelo lineal que utilizamos en el caso de regresión lineal multivariable se peude extender para regresiones no lineales. El modelo esta expresado por:\n",
     "\n",
