update perceptron notebook

--- a/machine learning/Taller perceptron/perceptron.ipynb
+++ b/machine learning/Taller perceptron/perceptron.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se puede ver que los pesos del perceptron comparados con adaline, en ambos casos, son considerablemene más pequeños. "
+    "Se puede ver, que para las compuertas AND y OR, los pesos para el perceptron se mantienen igual mientras que para adaline si son diferentes. Eso se explicar debido a que el perceptron hace una comparación discreta con la clase de salida, mientras que adaline hace una comparación de valores continuos y no con la clase directamente. "
    ]
   },
   {
@@ -1212,8 +1212,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Con adaline, el tiempo de ejecución es mas largo. "
+    "Se evidencia que ambos modelos de neurana clasifican correctamente el conjunto de datos Iris. Sin embargo, se da cuenta que con adaline, el tiempo de ejecución es mas largo puesto que requiere de una tasa de aprendizaje más fina y un mayor número de iteraciones. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
