update notebook Hanoi. Comment for local computations

--- a/AI/Miniproyecto - torres de hanoi/Hanoi.ipynb
+++ b/AI/Miniproyecto - torres de hanoi/Hanoi.ipynb
@@ -930,7 +930,7 @@
     }
    ],
    "source": [
-    "myList = dict_tiempos_sol2.items()\n",
+    "myList = dict_tiempos_sol2.items() # cambiar a dict_tiempos_sol, para correr con datos generados de forma local\n",
     "x, y = zip(*myList) \n",
     "\n",
     "x_reg = np.arange(3,13)\n",
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 490,
    "metadata": {},
    "outputs": [
     {
@@ -970,13 +970,6 @@
     "my_n = 64 # cantidad de discos\n",
     "print(f\"El tiempo estimado para encontrar la solución para {my_n} discos es de {round(mymodel(my_n) * (1/(60))):,} minutos; equivalente a {round(mymodel(my_n) * (1/(60 * 60 * 24 * 30 * 12))):,} años de cómputo contínuo.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
