update audio class notebook

--- a/machine learning/Proyecto 2 - reconocimiento vocales NN/audio class.ipynb
+++ b/machine learning/Proyecto 2 - reconocimiento vocales NN/audio class.ipynb
@@ -2516,44 +2516,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array(['i', 'a'], dtype=object)"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la muestra corresponde a las vocales ['i' 'a'], la predicción es ['i' 'a']\n"
+     ]
     }
    ],
    "source": [
     "predict_x=model.predict(X_test[0:2]) \n",
     "classes_x=np.argmax(predict_x,axis=1)\n",
-    "encoder.inverse_transform(classes_x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['i', 'a'], dtype=object)"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "encoder.inverse_transform(y_test[0:2])"
+    "pred_str = str(encoder.inverse_transform(classes_x))\n",
+    "test_str = encoder.inverse_transform(y_test[0:2])\n",
+    "\n",
+    "print(f\"la muestra corresponde a las vocales {test_str}, la predicción es {pred_str}\")"
    ]
   },
   {
