--- a/machine learning/Proyecto 2 - reconocimiento vocales NN/notebooks/clasificador_vocales.ipynb
+++ b/machine learning/Proyecto 2 - reconocimiento vocales NN/notebooks/clasificador_vocales.ipynb
@@ -1323,7 +1323,7 @@
     "> Se oserva que el modelo de redes neuronames encontrado es capaz de clasificar las muestras de audio de las vocales con un $88\\%$ de precisión.\n",
     "\n",
     "2. ¿Qué criterio utilizó para seleccionar la arquitectura de la red?\n",
-    "> Se elije una red neuronal con cuatro capas ocultas. En todas las capas, excepto la de salida, las neuronas tienen como función de activación a la RELU; mientras que en la capa de salida se tiene SOFTMAX. El criterio para seleccionar esta arquitectura fue el de obtener la máxima precisión posible aprovechando los recursos de hardware disponibles. \n",
+    "> Se elige una red neuronal con cuatro capas ocultas. En todas las capas, excepto la de salida, las neuronas tienen como función de activación a la RELU; mientras que en la capa de salida se tiene SOFTMAX. El criterio para seleccionar esta arquitectura fue el de obtener la máxima precisión posible aprovechando los recursos de hardware disponibles. \n",
     "\n",
     "3. ¿Tiene la red el comportamiento esperado?, si no es así, ¿A qué cree que se debe esto?\n",
     "> Si, la red tiene el comportamiento esperado ya que esta en capacidad de clasificar audios de vocales. Esto es, debido a que la red ha sido entrenada con datos etiquetados, con varias iteraciones sobre el conjunto de datos. \n",
